projects/rylogic/Rylogic.Gfx/src/Gfx/View3d.cs


		// Create a shader
		[DllImport(Dll)] private static extern HSampler View3D_ShaderCreate(ref ShaderOptions options);

		// Create one of the stock shaders
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern HSampler View3D_ShaderCreateStock(EStockShader stock_shader, [MarshalAs(UnmanagedType.LPStr)] string config);

		// Read the properties of an existing texture
		[DllImport(Dll)] private static extern ImageInfo View3D_TextureGetInfo(HTexture tex);
		[DllImport(Dll)] private static extern EResult View3D_TextureGetInfoFromFile([MarshalAs(UnmanagedType.LPStr)] string tex_filepath, out ImageInfo info);

		// Release a reference to a resources
		[DllImport(Dll)] private static extern void View3D_TextureRelease(HTexture tex);
		[DllImport(Dll)] private static extern void View3D_CubeMapRelease(HCubeMap tex);
		[DllImport(Dll)] private static extern void View3D_SamplerRelease(HSampler sam);
		[DllImport(Dll)] private static extern void View3D_ShaderRelease(HShader shdr);

		// Resize this texture to 'size'
		[DllImport(Dll)] private static extern void View3D_TextureResize(HTexture tex, ulong width, uint height, ushort depth_or_array_len);

		// Return the ref count of 'tex'
		[DllImport(Dll)] private static extern ulong View3D_TextureRefCount(HTexture tex);

		// Get/Set the private data associated with 'guid' for 'tex'
		[DllImport(Dll)] private static extern void View3d_TexturePrivateDataGet(HTexture tex, Guid guid, ref uint size, IntPtr data);
		[DllImport(Dll)] private static extern void View3d_TexturePrivateDataSet(HTexture tex, Guid guid, uint size, IntPtr data);
		[DllImport(Dll)] private static extern void View3d_TexturePrivateDataIFSet(HTexture tex, Guid guid, IntPtr pointer);

		// Resolve a MSAA texture into a non-MSAA texture
		[DllImport(Dll)] private static extern void View3D_TextureResolveAA(HTexture dst, HTexture src);

		// Gizmos *********************************

		// Create the 3D manipulation gizmo
		[DllImport(Dll)] private static extern HGizmo View3D_GizmoCreate(Gizmo.EMode mode, ref m4x4 o2w);

		// Delete a 3D manipulation gizmo
		[DllImport(Dll)] private static extern void View3D_GizmoDelete(HGizmo gizmo);

		// Attach/Detach callbacks that are called when the gizmo moves
		[DllImport(Dll)] private static extern void View3D_GizmoMovedCBSet(HGizmo gizmo, Gizmo.Callback cb, IntPtr ctx, bool add);

		// Attach/Detach an object to the gizmo that will be moved as the gizmo moves
		[DllImport(Dll)] private static extern void View3D_GizmoAttach(HGizmo gizmo, HObject obj);
		[DllImport(Dll)] private static extern void View3D_GizmoDetach(HGizmo gizmo, HObject obj);

		// Get/Set the scale factor for the gizmo
		[DllImport(Dll)] private static extern float View3D_GizmoScaleGet(HGizmo gizmo);
		[DllImport(Dll)] private static extern void View3D_GizmoScaleSet(HGizmo gizmo, float scale);

		// Get/Set the current mode of the gizmo
		[DllImport(Dll)] private static extern Gizmo.EMode View3D_GizmoModeGet(HGizmo gizmo);
		[DllImport(Dll)] private static extern void View3D_GizmoModeSet(HGizmo gizmo, Gizmo.EMode mode);

		// Get/Set the object to world transform for the gizmo
		[DllImport(Dll)] private static extern m4x4 View3D_GizmoO2WGet(HGizmo gizmo);
		[DllImport(Dll)] private static extern void View3D_GizmoO2WSet(HGizmo gizmo, ref m4x4 o2w);

		// Get the offset transform that represents the difference between the gizmo's transform at the start of manipulation and now.
		[DllImport(Dll)] private static extern m4x4 View3D_GizmoOffsetGet(HGizmo gizmo);

		// Get/Set whether the gizmo is active to mouse interaction
		[DllImport(Dll)] private static extern bool View3D_GizmoEnabledGet(HGizmo gizmo);
		[DllImport(Dll)] private static extern void View3D_GizmoEnabledSet(HGizmo gizmo, bool enabled);

		// Returns true while manipulation is in progress
		[DllImport(Dll)] private static extern bool View3D_GizmoManipulating(HGizmo gizmo);

		// Diagnostics ****************************

		// Get/Set whether object bounding boxes are visible
		[DllImport(Dll)] private static extern bool View3D_DiagBBoxesVisibleGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_DiagBBoxesVisibleSet(HWindow window, bool visible);

		// Get/Set the length of the vertex normals
		[DllImport(Dll)] private static extern float View3D_DiagNormalsLengthGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_DiagNormalsLengthSet(HWindow window, float length);

		// Get/Set the colour of the vertex normals
		[DllImport(Dll)] private static extern Colour32 View3D_DiagNormalsColourGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_DiagNormalsColourSet(HWindow window, Colour32 colour);

		[DllImport(Dll)] private static extern v2 View3D_DiagFillModePointsSizeGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_DiagFillModePointsSizeSet(HWindow window, v2 size);

		// Miscellaneous **************************
		
		// Create a render target texture on a D3D9 device. Intended for WPF D3DImage
		[DllImport(Dll)] private static extern HTexture View3D_CreateDx9RenderTarget(HWND hwnd, uint width, uint height, ref TextureOptions options, out IntPtr shared_handle);

		// Create a Texture instance from a shared d3d resource (created on a different d3d device)
		[DllImport(Dll)] private static extern HTexture View3D_CreateTextureFromSharedResource(IntPtr shared_resource, ref TextureOptions options);

		// Return the supported MSAA quality for the given multi-sampling count
		[DllImport(Dll)] private static extern int View3D_MSAAQuality(int count, EFormat format);

		// Return true if the focus point is visible. Add/Remove the focus point to a window.
		[DllImport(Dll)] private static extern bool View3D_StockObjectVisibleGet(HWindow window, EStockObject stock_object);
		[DllImport(Dll)] private static extern void View3D_StockObjectVisibleSet(HWindow window, EStockObject stock_object, bool show);

		// Get/Set the size of the focus point
		[DllImport(Dll)] private static extern float View3D_FocusPointSizeGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_FocusPointSizeSet(HWindow window, float size);
		
		// Get/Set the size of the origin point
		[DllImport(Dll)] private static extern float View3D_OriginPointSizeGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_OriginPointSizeSet(HWindow window, float size);

		// Get/Set the position and size of the selection box
		[DllImport(Dll)] private static extern void View3D_SelectionBoxGet(HWindow window, out BBox box, out m4x4 o2w);
		[DllImport(Dll)] private static extern void View3D_SelectionBoxSet(HWindow window, ref BBox box, ref m4x4 o2w);

		// Set the selection box to encompass all selected objects
		[DllImport(Dll)] private static extern void View3D_SelectionBoxFitToSelected(HWindow window);

		// Create/Delete the demo scene in the given window
		[DllImport(Dll)] private static extern Guid View3D_DemoSceneCreate(HWindow window);
		[DllImport(Dll)] private static extern void View3D_DemoSceneDelete();
		
		// Show a window containing the demo script
		[DllImport(Dll)] private static extern void View3D_DemoScriptShow(HWindow window);

		// Return the example Ldr script as a BSTR
		[DllImport(Dll, CharSet = CharSet.Unicode)][return: MarshalAs(UnmanagedType.BStr)] private static extern string View3D_ExampleScriptBStr();

		// Return the auto complete templates as a BSTR
		[DllImport(Dll, CharSet = CharSet.Unicode)][return: MarshalAs(UnmanagedType.BStr)] private static extern string View3D_AutoCompleteTemplatesBStr();

		// Return the hierarchy "address" for a position in an ldr script file.
		[DllImport(Dll, CharSet = CharSet.Unicode)][return: MarshalAs(UnmanagedType.BStr)] private static extern string View3D_ObjectAddressAt([MarshalAs(UnmanagedType.LPWStr)] string ldr_script, long position);

		// Parse a transform description using the Ldr script syntax
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern m4x4 View3D_ParseLdrTransform([MarshalAs(UnmanagedType.LPStr)] string ldr_script);

		// Handle standard keyboard shortcuts. 'key_code' should be a standard VK_ key code with modifiers included in the hi word. See 'EKeyCodes'
		[DllImport(Dll)] private static extern bool View3D_TranslateKey(HWindow window, EKeyCodes key_code);

		// Return the reference count of a COM interface
		[DllImport(Dll)] private static extern ulong View3D_RefCount(IntPtr pointer);

		// Tools **********************************

		// Show/Hide the object manager tool
		[DllImport(Dll)] private static extern bool View3D_ObjectManagerVisibleGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_ObjectManagerVisibleSet(HWindow window, bool show);

		// Show/Hide the script editor tool
		[DllImport(Dll)] private static extern bool View3D_ScriptEditorVisibleGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_ScriptEditorVisibleSet(HWindow window, bool show);

		// Show/Hide the measurement tool
		[DllImport(Dll)] private static extern bool View3D_MeasureToolVisibleGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_MeasureToolVisibleSet(HWindow window, bool show);

		// Show/Hide the angle measurement tool
		[DllImport(Dll)] private static extern bool View3D_AngleToolVisibleGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_AngleToolVisibleSet(HWindow window, bool show);

		// Show/Hide the lighting controls UI
		[DllImport(Dll)] private static extern void View3D_LightingControlsUI(HWindow window);

#if false

		// Camera
		[DllImport(Dll)]
		private static extern void View3D_CameraViewRectSet(HWindow window, float width, float height, float dist);
		[DllImport(Dll)]
		private static extern v2 View3D_ViewArea(HWindow window, float dist);

		// Materials
		[DllImport(Dll)]
		private static extern void View3D_TextureLoadSurface(HTexture tex, int level, [MarshalAs(UnmanagedType.LPWStr)] string tex_filepath, Rectangle[]? dst_rect, Rectangle[]? src_rect, EFilter filter, uint colour_key);
		[DllImport(Dll)]
		private static extern IntPtr View3D_TextureGetDC(HTexture tex, bool discard);
		[DllImport(Dll)]
		private static extern void View3D_TextureReleaseDC(HTexture tex);

		// Miscellaneous
		[DllImport(Dll)]
		private static extern void View3D_Flush();

		[DllImport(Dll)]
		private static extern HWND View3D_LdrEditorCreate(HWND parent);
		[DllImport(Dll)]
		private static extern void View3D_LdrEditorDestroy(HWND hwnd);
		[DllImport(Dll)]
		private static extern void View3D_LdrEditorCtrlInit(HWND scintilla_control, bool dark);
#endif
#endregion
	}
}
